--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -10,35 +10,14 @@
 }
 
 .user-profile img{
-    max-width: 40px;
-    border-radius: 20px;
-    margin-left: 10px;
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    border-radius: 50%;
 }
 
 .filtered_option select{
     border-radius: 12px;
-}
-
-
-.nav-bottom{
-    background-color: rgba(255, 255, 255);
-}
-
-.nav-bottom-btn {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-decoration: none;
-}
-
-.nav-bottom-btn i {
-    font-size: 17px;
-}
-
-.icon-label {
-    font-size: 12px;
-    margin-top: 5px;
-    text-align: center;
 }
 
 .parent {
