--- a/admin/css/create.css
+++ b/admin/css/create.css
@@ -1,24 +1,34 @@
-.form-control {
-    border-radius: 13px !important;
-}
-
-.form-container form{
-    min-width: 500px;
-    width: 700px;
+body{
+    background-color: #f8f9fa;
 }
 
 .upload-image-container {
     position: relative;
-    border-radius: 10px;
     border: 1px dashed grey;
     overflow: hidden;
     height: auto;
 }
 
+/* Add these rules to ensure the form behaves as expected */
+.form-container {
+    max-width: 650px;
+    width: 100%; /* Ensure it stretches within its parent */
+    display: flex; /* Confirm it's a flex container */
+    align-items: center; /* Center the form vertically */
+    justify-content: center; /* Center the form horizontally */
+}
+
+.form-container form {
+    max-width: 600px;
+    width: 100%; /* Ensure the form stretches to fill the container */
+    flex-shrink: 0; /* Prevent shrinking */
+}
+
+
 #image-preview {
     display: none;
     max-width: 100%;
-    max-height: 400px;
+    max-height: 250px;
     object-fit: contain;
     position: relative;
     z-index: 1; 
@@ -67,15 +77,31 @@
     display: block;
 }
 
-.title {
-    border-radius: 20px;
+.form-control:focus {
+    box-shadow: none;
+    border-color: #dc3545;
 }
 
-.button-container .btn {
-    border-radius: 20px;
+.form-check-input:checked {
+    background-color: #dc3545;
+    border-color: #dc3545;
 }
 
-.profile-container img {
-    max-height: 10px !important;
+.upload-image-container:hover {
+    border-color: #dc3545;
+    transition: border-color 0.3s ease;
 }
+
+.btn-outline-danger:hover {
+    background-color: #dc3545;
+    color: white;
+}
+
+@media (max-width: 992px){
+    .main-content{
+        display: flex !important;
+        justify-content: center !important;
+    }
+}
+
 
